--- a/dist.ini
+++ b/dist.ini
@@ -50,6 +50,7 @@ directory = xt
 directory = examples
 
 [Bugtracker]        ; defaults to RT
+web = http://github.com/me/%s/issues
 
 [MetaProvides::Package] ; add 'provides' to META files
 meta_noindex = 1        ; respect prior no_index directives
@@ -71,6 +72,8 @@ meta_noindex = 1        ; respect prior no_index directives
 [CheckChangesHasContent] ; ensure Changes has been updated
 [TestRelease]       ; ensure t/ tests pass
 [CheckExtraTests]   ; ensure xt/ tests pass
+
+[UploadToCPAN]
 
 ; after release
 [Git::Commit / Commit_Dirty_Files] ; commit Changes (as released)
