--- a/dist.ini
+++ b/dist.ini
@@ -16,7 +16,6 @@ web = http://github.com/me/%s/issues
 [CheckPrereqsIndexed]
 [CheckChangesHasContent]
 [TestRelease]
-[CheckExtraTests]
 
 [@Filter]
 -bundle = @JQUELIN
@@ -24,3 +23,4 @@ web = http://github.com/me/%s/issues
 -remove = BugTracker
 -remove = CompileTests
 -remove = PortabilityTests
+-remove = KwaliteeTests ; strictures with HTML::Zoom
