--- a/dist.ini
+++ b/dist.ini
@@ -16,6 +16,8 @@ web = http://github.com/me/%s/issues
 [CheckPrereqsIndexed]
 [CheckChangesHasContent]
 [TestRelease]
+[ReadmeMarkdownFromPod]
+[CopyReadmeFromBuild]
 
 [@Filter]
 -bundle = @JQUELIN
