--- a/dist.ini
+++ b/dist.ini
@@ -26,3 +26,4 @@ web = http://github.com/me/%s/issues
 -remove = CompileTests
 -remove = PortabilityTests
 -remove = KwaliteeTests ; strictures with HTML::Zoom
+-remove = PodCoverageTests
