--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name    = HTML-Zoom-Parser-HTML-Parser
 author  = Matthew Phillips <mattp@cpan.org>
-abstract = Glue to power HTML::Zoom with HTML Parser
+abstract = Glue to power HTML::Zoom with HTML::Parser
 license = Perl_5
 copyright_holder = Matthew Phillips
 
